--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -4,11 +4,11 @@ title: Generation Homes & Commercial | Contact Us
 description: add desc
 ---
 
-    <div class="grid-container">
+    <div class="grid-container page-content">
       <div class="grid-x grid-padding-x grid-padding-y">
         <div class="large-12 cell">
 
-      <h1 class="display">Contact Us</h1>
+        <h1 class="display small-heading" style="margin: 1em 0;">Contact Us</h1>
 
         <h4>Address</h4>
         <p>550 W. Alluvial, Suite #107<br>Fresno, CA 93711</p>
