--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@ hero-class: hero--large
 ---
 
 
-<div class="grid-container">
+<div class="grid-container page-content">
   <div class="grid-x grid-padding-x">
     <div class="large-12 cell">
       <h1>How can Generation Homes & Commercial help you?</h1>
@@ -29,6 +29,7 @@ Rated at the highest level for client satisfaction by the Houzz community.
 <a href="https://www.houzz.com/badges/user/generation_homes">view our houzz profile</a>
 
 <hr>
+(older website copy is below for reference)
 
       <p>
       There are certain things from the past that just have a lasting effect, like great style, enviable craftsmanship, and the sense of enduring value. While this seems like an exaggeration, we believe that these places exist, and can be found in abundance right here in the Fresno, Madera, Kings and Tulare counties, brought to you by Generation Homes & Commercial.
