--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -4,11 +4,11 @@ title: Generation Homes & Commercial | Reviews | Client Testimonials
 description: add desc
 ---
 
-    <div class="grid-container">
+    <div class="grid-container page-content">
       <div class="grid-x grid-padding-x grid-padding-y">
         <div class="large-12 cell">
 
-<h1 class="display">Client Testimonials</h1>
+<h1 class="display" style="margin: 1em 0;">Client Testimonials</h1>
 <p style="font-size: 1.25rem;">
 Read what our clients have to say about working with services-custom-homes.
 <br>You can read all of our <a href="https://www.houzz.com/browseReviews/generation_homes">reviews on our Houzz Profile</a>.
