--- a/src/pages/services-commercial.html
+++ b/src/pages/services-commercial.html
@@ -33,7 +33,7 @@ images:
 
 {{> hero }}
 
-<div class="grid-container">
+<div class="grid-container page-content">
   <div class="grid-x grid-padding-x grid-padding-y">
     <div class="large-12 cell">
 
