--- a/src/pages/services-custom-homes.html
+++ b/src/pages/services-custom-homes.html
@@ -1,9 +1,9 @@
 ---
-title: Generation Homes & Commercial | New Homes
+title: Generation Homes & Commercial | Custom Homes
 description: add desc
 
 hero-bg:  /assets/img/new_construction/Cascadel.jpg
-hero-class: bg--dark bg--80 text--light
+hero-class: bg--dark bg--50 text--light
 hero-title: <span class="text-xl">Custom Homes</span><br>Focus on Quality and craftsmanship
 
 mainimage: /assets/img/new_construction/Cascadel.jpg
@@ -27,18 +27,18 @@ images:
 
 {{> hero }}
 
-<div class="grid-container">
+<div class="grid-container page-content">
   <div class="grid-x grid-padding-x grid-padding-y">
     <div class="large-12 cell">
 
       <h2>Custom Home Construction that focuses on Quality and Craftsmanship</h2>
+
       <div class="card gallery-trigger float-right gallery-trigger--right" type="button" data-toggle="gallery1" role="button">
         <img src="/assets/img/new_construction/Cascadel.jpg" sizes="" alt="" class="" />
         <div class="card-section">
           <p>View our Custom Homes gallery <a href="#">here</a> &rsaquo;</p>
         </div>
       </div>
-
 
 <p>
 If you’re a realtor or home buyer looking for a new home for sale in the Fresno California area, Central Unified School District, Sanger Unified School District, or King Canyon Unified School District, then contact us and let us know how we can help.
@@ -49,6 +49,7 @@ Our new home construction focus is on not only providing the best in craftsmansh
 </p>
 
 <hr>
+(older website copy is below for reference)
 
       <p>
       Generation Homes & Commercial is more than just a general contractor for Fresno, CA — We are a respected builder, serving the Central Valley since 1996 with a diverse background in home building and remodeling. Having built more than 1,000 homes – whether they were part of large single-family communities, upscale custom homes built for those with discerning taste and a demand for attention to detail, or custom kitchen, bath, and whole-home remodels – we continue our drive to be your builder of choice.
@@ -79,7 +80,7 @@ Our new home construction focus is on not only providing the best in craftsmansh
   data-animation-out="fade-out"
   data-reveal>
   <button class="close-button" aria-label="Close Gallery" type="button" data-close><span aria-hidden="true">&times;</span></button>
-  <h3 id="galler1y1_label" class="gallery-label">New Homes Gallery</h3>
+  <h3 id="galler1y1_label" class="gallery-label">Custom Homes Gallery</h3>
   {{> gallery }}
 </div>
 
