--- a/src/pages/services-painting.html
+++ b/src/pages/services-painting.html
@@ -5,58 +5,17 @@ description: add desc
 hero-bg:  /assets/img/hero/commercial-header.jpg
 hero-class: bg--dark bg--50 text--light
 hero-title: <span class="text-xl">Painting</span><br>Services
-
-mainimage: /assets/img/commercial/DesignCenter012.jpg
-images:
-  - file: /assets/img/commercial/DesignCenter014.jpg
-    alt: design center 1
-  - file: /assets/img/commercial/DesignCenter012.jpg
-    alt: design center 2
-  - file: /assets/img/commercial/DesignCenter001.jpg
-    alt: design center 3
-  - file: /assets/img/commercial/NL5A9419.jpg
-    alt: church exterior 1
-  - file: /assets/img/commercial/NL5A9405.jpg
-    alt: church exterior 2
-  - file: /assets/img/commercial/NL5A9399.jpg
-    alt: church exterior 3
-  - file: /assets/img/commercial/Office5.jpg
-    alt: office interior 1
-  - file: /assets/img/commercial/Office3.jpg
-    alt: office interior 2
-  - file: /assets/img/commercial/Office2.jpg
-    alt: office interior 3
-  - file: /assets/img/commercial/Office1.jpg
-    alt: office interior 4
 ---
-
 
 {{> hero }}
 
-<div class="grid-container">
+<div class="grid-container page-content">
   <div class="grid-x grid-padding-x grid-padding-y">
     <div class="large-12 cell">
 
       <h2>add stuff here</h2>
 
-      <div class="card gallery-trigger float-right gallery-trigger--right" type="button" data-toggle="gallery1" role="button">
-        <img src="/assets/img/commercial/DesignCenter012.jpg" sizes="" alt="" class="" />
-        <div class="card-section">
-          <p><a href="#">Commercial projects gallery</a> &rsaquo;</p>
-        </div>
-      </div>
 
-      <p>
-      Generation Homes and affiliates have been in business since 1996. While we are primarily known for our <a href="/services-remodel.html">residential</a> construction projects, we have been quietly involved in a diverse array of commercial projects.
-      </p>
-
-      <p>
-      We have been the prime contractor on new garden office buildings, tenant improvements and the reconstruction of both the interior and exteriors of several commercial buildings. We have a breadth of experience that ranges from the standard office improvement to complete and extensive reconstruction. In our experience these have included, complete historical retrofit of church facilities and extensive interior improvements including; medical office, general office and décor centers.
-      </p>
-
-      <p>
-      One of our greatest attributes is being able to combine our resources from our residential and commercial experience to offer the best possible economics solutions for any project.
-      </p>
 
     </div>
   </div>
@@ -64,15 +23,6 @@ images:
 
 
 
-<div class="gallery-wrap reveal"
-  id="gallery1"
-  aria-labelledby="galler1y1_label"
-  aria-modal="true"
-  role="dialog"
-  data-animation-in="slide-in-right"
-  data-animation-out="fade-out"
-  data-reveal>
-  <button class="close-button" aria-label="Close Gallery" type="button" data-close><span aria-hidden="true">&times;</span></button>
-  <h3 id="galler1y1_label" class="gallery-label">Commercial Projects</h3>
-  {{> gallery }}
-</div>
+
+
+
