--- a/src/pages/services-remodel--old.html
+++ b/src/pages/services-remodel--old.html
@@ -32,26 +32,32 @@ hero-title: <span class="text-xl">Home Remodeling</span><br>Kitchen, Bath, Compl
       <h3>Full Home Remodels</h3>
     </div>
      <div class="large-12 cell">
-add a gallery
+      {{> residential_wiggins }}
+      {{> residential_pipes }}
+      {{> residential_baldwin }}
      </div>
      <div class="large-12 cell">
       <h3>Kitchen &amp; Dining Remodels</h3>
      </div>
      <div class="large-12 cell">
-add a gallery or images
+      {{> residential_abdo }}
+      {{> residential_armstrong }}
+      {{> residential_ross }}
+      {{> residential_orlando }}
     </div>
     <div class="large-12 cell">
       <h3>Bath Remodels</h3>
         </div>
      <div class="large-12 cell">
-add a gallery or images
+      {{> residential_bezmalinovic }}
+      {{> residential_chaltraw }}
     </div>
     <div class="large-12 cell">
       <h3>Before and After gallery</h3>
 
     </div>
     <div class="large-12 cell">
-      add a gallery or images
+      {{> residential_before_after }}
     </div>
   </div>
 </div>
