--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -3,7 +3,7 @@ title: Generation Homes & Commercial | Services we offer
 description: add desc
 
 hero-bg: /assets/img/hero/services-header.jpg
-hero-class: bg--dark bg--80 text--light
+hero-class: bg--dark bg--50 text--light
 hero-title: <span class="text-xl">Services</span><br>Residential, New Homes, Commercial
 
 ---
@@ -11,41 +11,81 @@ hero-title: <span class="text-xl">Services</span><br>Residential, New Homes, Com
 {{> hero }}
 
 
-    <div class="grid-container">
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
+<div class="grid-container page-content">
+  <div class="grid-x grid-padding-x">
+    <div class="cell">
 
-          <h2>Home Remodeling</h2>
+        <div class="grid-x grid-margin-x grid-padding-y align-middle">
+          <div class="cell medium-6 large-4">
 
-          <p>
-          We have done everything from simple bathroom remodels to complete home renovations. These include virtually every type of home; from historically significant to just adding on a room or garage to meet your needs. We pride ourselves on meeting the customer’s needs from both the desired end result to budget constraints. We deploy a variety of both internal and external professionals to meet every client’s demands. You will find with Generation Homes & Commercial that we openly share costs of construction and offer a variety of solutions to meet your needs.
-          </p>
-
-          <h2>Custom Homes</h2>
-
-          <p>
-          Generation Homes & Commercial has constructed over 750 new homes from every level; first time buyer, move up markets, and custom homes since 1996. We fully understand the demands for modern lifestyles that must create highly efficient and livable floor plans with enduring design. It is our utmost to focus on the highest in quality materials and finished product to meet and exceed our customers’ expectations. Please look at our current neighborhoods or let us create a home of ours or one of your custom designs.
-          </p>
-
-          <h2>Commercial Construction</h2>
-
-          <p>
-          Generation Commercial Construction has been involved in California projects that have reconstructed historically significant buildings, new general office construction to simple tenant improvements. Our experience aligns our client’s needs, budget constraints, and professionals to provide a great breadth of construction solutions.
-          </p>
-
-          <h2>Painting</h2>
-
-          <p>
-          Add stuff here
-          </p>
-
-          <h2>The Phoenix Project</h2>
-
-          <p>
-          Add stuff here
-          </p>
-
-
+<a href="/services-remodel.html"><img src= "https://via.placeholder.com/600x600?text=remodeling+image" alt="" /></a>
+          </div>
+          <div class="cell medium-6 large-8">
+<h2><a href="/services-remodel.html">Home Remodeling</a></h2>
+<p>
+We have done everything from simple bathroom remodels to complete home renovations. These include virtually every type of home; from historically significant to just adding on a room or garage to meet your needs. We pride ourselves on meeting the customer’s needs from both the desired end result to budget constraints. We deploy a variety of both internal and external professionals to meet every client’s demands. You will find with Generation Homes & Commercial that we openly share costs of construction and offer a variety of solutions to meet your needs.
+</p>
+          </div>
         </div>
-      </div>
+
+
+
+        <div class="grid-x grid-margin-x grid-padding-y align-middle">
+          <div class="cell medium-6 large-8">
+<h2><a href="/services-custom-homes.html">Custom Homes</a></h2>
+<p>
+Generation Homes & Commercial has constructed over 750 new homes from every level; first time buyer, move up markets, and custom homes since 1996. We fully understand the demands for modern lifestyles that must create highly efficient and livable floor plans with enduring design. It is our utmost to focus on the highest in quality materials and finished product to meet and exceed our customers’ expectations. Please look at our current neighborhoods or let us create a home of ours or one of your custom designs.
+</p>
+          </div>
+          <div class="cell medium-6 large-4">
+<a href="/services-custom-homes.html"><img src= "https://via.placeholder.com/600x600?text=custom+homes+image" alt="" loading="lazy" /></a>
+          </div>
+        </div>
+
+
+        <div class="grid-x grid-margin-x grid-padding-y align-middle">
+          <div class="cell medium-6 large-4">
+<a href="/services-commercial.html"><img src= "https://via.placeholder.com/600x600?text=commercial+construction+image" alt="" loading="lazy" /></a>
+          </div>
+          <div class="cell medium-6 large-8">
+<h2><a href="/services-commercial.html">Commercial Construction</a></h2>
+
+<p>
+Generation Commercial Construction has been involved in California projects that have reconstructed historically significant buildings, new general office construction to simple tenant improvements. Our experience aligns our client’s needs, budget constraints, and professionals to provide a great breadth of construction solutions.
+</p>
+          </div>
+        </div>
+
+
+        <div class="grid-x grid-margin-x grid-padding-y align-middle"></a>
+          <div class="cell medium-6 large-8">
+<h2><a href="/services-painting.html">Painting</a></h2>
+<p>
+Add stuff here
+</p>
+          </div>
+          <div class="cell medium-6 large-4">
+<a href="/services-painting.html"><img src= "https://via.placeholder.com/600x600?text=painting+image" alt="" loading="lazy" /></a>
+          </div>
+        </div>
+
+
+        <div class="grid-x grid-margin-x grid-padding-y align-middle">
+
+          <div class="cell medium-6 large-4">
+<a href="/the-phoenix-project.html"><img src= "https://via.placeholder.com/600x600?text=phoenix+image" alt="" loading="lazy" /></a>
+          </div>
+          <div class="cell medium-6 large-8">
+<h2><a href="/the-phoenix-project.html">The Phoenix Project</a></h2>
+<p>
+Add stuff here
+</p>
+          </div>
+
+</div>
+
+
+
     </div>
+  </div>
+</div>
