--- a/src/pages/the-phoenix-project.html
+++ b/src/pages/the-phoenix-project.html
@@ -4,7 +4,7 @@ title: Generation Homes & Commercial | The Phoenix Project
 description: add desc
 ---
 
-    <div class="grid-container">
+    <div class="grid-container page-content">
       <div class="grid-x grid-padding-x grid-padding-y">
         <div class="large-12 cell">
 
